# EgretCpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  main.cpp
docs/: DisplayObject-cpp-translation.md  Geom-cpp-translation.md  Project-Progress-Report.md  skia-runtime-library-mismatch-troubleshooting.md
egret-core-5.4.1/: CLAUDE.md  README.md
egret-core-5.4.1/docs/project-analysis/: cpp-porting-guide.md  dependencies-analysis.md  egret-graphics-api-analysis.md  egret-opengl-workflow-analysis.md  entry-point-analysis.md
egret-core-5.4.1/src/egret/display/: DisplayObject.ts
egret-core-5.4.1/src/egret/media/: Sound.ts
egret-core-5.4.1/src/egret/media/web/: HtmlSound.ts  WebAudioSound.ts  WebAudioSoundChannel.ts  WebVideo.ts
egret-core-5.4.1/src/egret/sensor/web/: WebGeolocation.ts  WebMotion.ts
egret-core-5.4.1/src/egret/text/: TextField.ts
egret-core-5.4.1/src/egret/text/web/: WebTextMeasurer.ts
examples/: CMakeLists.txt  README.md
examples/01-basic-window/: CMakeLists.txt  README.md  main.cpp
examples/02-events-demo/: CMakeLists.txt  main.cpp
examples/03-event-flow/: CMakeLists.txt  main.cpp
examples/04-hit-test/: CMakeLists.txt  main.cpp
examples/05-keyboard-shortcuts/: CMakeLists.txt  main.cpp
examples/06-resize-scalemode/: CMakeLists.txt  main.cpp
src/core/: HashObject.cpp  HashObject.hpp
src/display/: Bitmap.cpp  Bitmap.hpp  BitmapData.cpp  BitmapData.hpp  BitmapFillMode.cpp  BitmapFillMode.hpp  BlendMode.cpp  BlendMode.hpp  DisplayList.cpp  DisplayList.hpp  DisplayObject.cpp  DisplayObject.hpp  DisplayObjectContainer.cpp  DisplayObjectContainer.hpp  Graphics.cpp  Graphics.hpp  LineStyles.cpp  LineStyles.hpp  RenderTexture.cpp  RenderTexture.hpp  Shape.cpp  Shape.hpp  Sprite.cpp  Sprite.hpp  SpriteSheet.cpp  SpriteSheet.hpp  Stage.cpp  Stage.hpp  Texture.cpp  Texture.hpp
src/events/: Event.cpp  Event.hpp  EventDispatcher.cpp  EventDispatcher.hpp  EventPhase.hpp  IEventDispatcher.hpp  IOErrorEvent.cpp  IOErrorEvent.hpp  KeyCode.hpp  Keyboard.cpp  Keyboard.hpp  KeyboardEvent.cpp  KeyboardEvent.hpp  ProgressEvent.cpp  ProgressEvent.hpp  TextEvent.cpp  TextEvent.hpp  TimerEvent.cpp  TimerEvent.hpp  TouchEvent.cpp  TouchEvent.hpp
src/extension/assetsmanager/: FileSystem.cpp  FileSystem.hpp  Path.cpp  Path.hpp  ResourceEvent.cpp  ResourceEvent.hpp  ResourceItem.cpp  ResourceItem.hpp
src/filters/: ColorMatrixFilter.cpp  ColorMatrixFilter.hpp  Filter.cpp  Filter.hpp
src/geom/: Color4.cpp  Color4.hpp  Matrix.cpp  Matrix.hpp  Point.cpp  Point.hpp  Rectangle.cpp  Rectangle.hpp
src/net/: ImageLoader.cpp  ImageLoader.hpp
src/platform/sdl/: SDLEventConverter.cpp  SDLEventConverter.hpp  SDLPlatform.cpp  SDLPlatform.hpp  SDLWindow.cpp  SDLWindow.hpp
src/player/: NormalBitmapNode.cpp  NormalBitmapNode.hpp  Player.cpp  Player.hpp  PlayerFactory.cpp  PlayerFactory.hpp  PlayerOption.hpp  RenderBuffer.cpp  RenderBuffer.hpp  RenderNode.cpp  RenderNode.hpp  SimpleFPSDisplay.cpp  SimpleFPSDisplay.hpp  SkiaRenderBuffer.cpp  SkiaRenderBuffer.hpp  SkiaRenderer.cpp  SkiaRenderer.hpp  SystemRenderer.cpp  SystemRenderer.hpp  SystemTicker.cpp  SystemTicker.hpp
src/player/nodes/: BitmapNode.cpp  BitmapNode.hpp  GroupNode.cpp  GroupNode.hpp  MeshNode.cpp  MeshNode.hpp  TextNode.cpp  TextNode.hpp
src/sys/: GraphicsNode.cpp  GraphicsNode.hpp  Path2D.cpp  Path2D.hpp  Screen.cpp  Screen.hpp  StrokePath.cpp  StrokePath.hpp  TextFormat.hpp
src/text/: HorizontalAlign.cpp  HorizontalAlign.hpp  TextField.cpp  TextField.hpp  TextFieldInputType.cpp  TextFieldInputType.hpp  TextFieldType.cpp  TextFieldType.hpp  VerticalAlign.cpp  VerticalAlign.hpp
src/utils/: CallLater.cpp  CallLater.hpp  Lifecycle.cpp  Lifecycle.hpp  Logger.cpp  Logger.hpp  Timer.cpp  Timer.hpp
